Fix CSS layout bugs on admin panel

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -15,6 +15,10 @@ h3 {
   font-size: 16pt;
 }
 
+div#content {
+  width: 960px;
+}
+
 input[type="text"] {
   padding: .4em .25em;
 
@@ -43,17 +47,20 @@ td.title {
   text-align: right;
 }
 
-h1#header {
-  margin: 0;
-  padding: 5px;
+div#header {
   width: 100%;
   background-color: #000000;
+}
+
+div#header h1 {
+  margin: 0;
+  padding: 5px;
   color: #ffffff;
 }
 
 div#container {
   float: left;
-  width: 800px;
+  min-width: 600px;
   margin: 10px auto;
 }
 
